--- a/404.html
+++ b/404.html
@@ -66,8 +66,9 @@
       }
     </style>
     <script type="module" crossorigin src="/FX/assets/index.js"></script>
-    <link rel="modulepreload" crossorigin href="/FX/assets/vendor.js">
     <link rel="modulepreload" crossorigin href="/FX/assets/element.js">
+    <link rel="modulepreload" crossorigin href="/FX/assets/vendor.js">
+    <link rel="stylesheet" crossorigin href="/FX/assets/element.css">
     <link rel="stylesheet" crossorigin href="/FX/assets/index.css">
   </head>
   <body>
