--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         content: "\e6b2";
       }
     </style>
-    <script type="module" crossorigin src="/chat-index-B-_wSRsA.js"></script>
-    <link rel="modulepreload" crossorigin href="/chat-vendor-BrOh9MUQ.js">
-    <link rel="modulepreload" crossorigin href="/chat-element-C03ZGswg.js">
-    <link rel="stylesheet" crossorigin href="/chat-index-BwstpA15.css">
+    <script type="module" crossorigin src="/FX/chat-index-Dt5A4Wk2.js"></script>
+    <link rel="modulepreload" crossorigin href="/FX/chat-vendor-BrOh9MUQ.js">
+    <link rel="modulepreload" crossorigin href="/FX/chat-element-C03ZGswg.js">
+    <link rel="stylesheet" crossorigin href="/FX/chat-index-BwstpA15.css">
   </head>
   <body>
     <div id="app"></div>
