--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         content: "\e6b2";
       }
     </style>
-    <script type="module" crossorigin src="/FX/chat-index-C8PWzGyo.js"></script>
+    <script type="module" crossorigin src="/FX/chat-index-B3c8Dexn.js"></script>
     <link rel="modulepreload" crossorigin href="/FX/chat-vendor-BrOh9MUQ.js">
     <link rel="modulepreload" crossorigin href="/FX/chat-element-C03ZGswg.js">
-    <link rel="stylesheet" crossorigin href="/FX/chat-index-BwstpA15.css">
+    <link rel="stylesheet" crossorigin href="/FX/chat-index-De59_YPB.css">
   </head>
   <body>
     <div id="app"></div>
